tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__random__test__emit_random_codegen@pre-mem2reg@llvm14.snap
---
source: tket-qsystem/src/llvm/random.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private {} @_hl.main.1({} %0, i64 %1) {
alloca_block:
  %"0" = alloca {}, align 8
  %"2_0" = alloca {}, align 8
  %"2_1" = alloca i64, align 8
  %"4_0" = alloca {}, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store {} %0, {}* %"2_0", align 1
  store i64 %1, i64* %"2_1", align 4
  %"2_01" = load {}, {}* %"2_0", align 1
  %"2_12" = load i64, i64* %"2_1", align 4
  call void @random_advance(i64 %"2_12")
  store {} %"2_01", {}* %"4_0", align 1
  %"4_03" = load {}, {}* %"4_0", align 1
  store {} %"4_03", {}* %"0", align 1
  %"04" = load {}, {}* %"0", align 1
  ret {} %"04"
}

declare void @random_advance(i64)
