tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__random__test__emit_random_codegen@pre-mem2reg@llvm14_2.snap
---
source: tket-qsystem/src/llvm/random.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { double, {} } @_hl.main.1({} %0) {
alloca_block:
  %"0" = alloca double, align 8
  %"1" = alloca {}, align 8
  %"2_0" = alloca {}, align 8
  %"4_0" = alloca double, align 8
  %"4_1" = alloca {}, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store {} %0, {}* %"2_0", align 1
  %"2_01" = load {}, {}* %"2_0", align 1
  %rfloat = call double @random_float()
  store double %rfloat, double* %"4_0", align 8
  store {} zeroinitializer, {}* %"4_1", align 1
  %"4_02" = load double, double* %"4_0", align 8
  %"4_13" = load {}, {}* %"4_1", align 1
  store double %"4_02", double* %"0", align 8
  store {} %"4_13", {}* %"1", align 1
  %"04" = load double, double* %"0", align 8
  %"15" = load {}, {}* %"1", align 1
  %mrv = insertvalue { double, {} } undef, double %"04", 0
  %mrv6 = insertvalue { double, {} } %mrv, {} %"15", 1
  ret { double, {} } %mrv6
}

declare double @random_float()
